# AutoPlanner

./: .dockerignore  CLAUDE.md  Dockerfile  README.md
.github/workflows/: deploy.yml
backend/: .bazelrc  .gitignore  BUILD  CMakeLists.txt  WORKSPACE
backend/src/: auth.cpp  auth.h  azuresql_backend.cpp  azuresql_backend.h  blob_storage.h  database.cpp  database.h  db_backend.h  main.cpp  models.h  routes.cpp  routes.h  seed.cpp  seed.h  sqlite_backend.cpp  sqlite_backend.h
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  helpers.js  main.jsx
frontend/src/auth/: AuthContext.jsx  LoginPage.jsx  authConfig.js
frontend/src/components/: MarkdownEditor.jsx  PlanView.jsx  ReviewModal.jsx  SummaryView.jsx  TaskForm.jsx  TaskList.jsx
